--- a/package.json
+++ b/package.json
@@ -43,17 +43,18 @@
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
+    "@types/react-router-redux": "^4.0.39",
     "antd": "^2.6.4",
     "md5": "^2.2.1",
     "moment": "^2.17.1",
     "raw-loader": "^0.5.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
-    "react-hot-loader": "^3.0.0-beta.6"
+    "redux-thunk": "^2.2.0"
   }
 }
