--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/viccrubs/VicBlog-Front"
+    "url": "https://github.com/viccrubs/VicBlog-Frontend"
   },
   "author": "Chen Junda",
   "license": "MIT",
   "devDependencies": {
+    "@types/highlight.js": "^9.1.9",
     "@types/md5": "^2.1.31",
     "@types/react": "^15.0.6",
     "@types/react-dom": "^0.14.22",
@@ -45,6 +46,8 @@
   "dependencies": {
     "@types/react-router-redux": "^4.0.39",
     "antd": "^2.6.4",
+    "highlight.js": "^9.9.0",
+    "markdown-it": "^8.2.2",
     "md5": "^2.2.1",
     "moment": "^2.17.1",
     "raw-loader": "^0.5.1",
@@ -55,6 +58,7 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "simplemde": "^1.11.2"
   }
 }
