--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^0.26.1",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
+    "isomorphic-fetch": "^2.2.1",
     "redux-logger": "^2.8.1",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
