registerpage is replaced by a register modal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
         "target": "es6",
         "allowSyntheticDefaultImports": true
     },
+    "awesomeTypescriptLoaderOptions":{
+        "useBabel":true,
+        "useCache":true
+    },
     "exclude": [
         "dist",
         "node_modules"
