--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A React+Redux+Typescript blog SPA",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -21,13 +22,12 @@
     "@types/react-router": "^3.0.0",
     "@types/react-router-redux": "^4.0.39",
     "@types/redux": "^3.6.31",
-    "@types/redux-thunk": "^2.1.31",
     "@types/webpack-env": "^1.13.0",
     "@types/whatwg-fetch": "^0.0.33",
+    "awesome-typescript-loader": "^3.0.4-rc.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-import": "^1.1.0",
-    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.22.0",
@@ -38,8 +38,6 @@
     "isomorphic-fetch": "^2.2.1",
     "redux-logger": "^2.8.1",
     "style-loader": "^0.13.1",
-    "ts-loader": "^2.0.0",
-    "tslint": "^4.4.2",
     "typescript": "^2.1.5",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
@@ -59,7 +57,6 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
-    "simplemde": "^1.11.2"
+    "redux-thunk": "^2.2.0"
   }
 }
