--- a/package.json
+++ b/package.json
@@ -15,47 +15,47 @@
   "license": "MIT",
   "devDependencies": {
     "@types/highlight.js": "^9.1.9",
+    "@types/isomorphic-fetch": "0.0.33",
     "@types/md5": "^2.1.31",
-    "@types/react": "^15.0.6",
-    "@types/react-dom": "^0.14.22",
+    "@types/react": "^15.0.12",
+    "@types/react-dom": "^0.14.23",
     "@types/react-redux": "^4.4.36",
-    "@types/react-router": "^3.0.0",
-    "@types/react-router-redux": "^4.0.39",
+    "@types/react-router": "^3.0.5",
+    "@types/react-router-redux": "^4.0.41",
     "@types/redux": "^3.6.31",
     "@types/webpack-env": "^1.13.0",
-    "@types/whatwg-fetch": "^0.0.33",
-    "awesome-typescript-loader": "^3.0.4-rc.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-import": "^1.1.0",
+    "awesome-typescript-loader": "^3.0.7",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-import": "^1.1.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
-    "css-loader": "^0.26.1",
-    "file-loader": "^0.10.0",
+    "css-loader": "^0.26.2",
+    "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
-    "isomorphic-fetch": "^2.2.1",
     "redux-logger": "^2.8.1",
-    "style-loader": "^0.13.1",
-    "typescript": "^2.1.5",
+    "style-loader": "^0.13.2",
+    "typescript": "^2.2.1",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
-    "@types/react-router-redux": "^4.0.39",
-    "antd": "^2.6.4",
+    "@types/react-router-redux": "^4.0.41",
+    "antd": "^2.7.2",
     "highlight.js": "^9.9.0",
-    "markdown-it": "^8.2.2",
+    "isomorphic-fetch": "^2.2.1",
+    "markdown-it": "^8.3.0",
     "md5": "^2.2.1",
     "moment": "^2.17.1",
     "raw-loader": "^0.5.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
-    "react-redux": "^5.0.2",
+    "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
-    "react-router-redux": "^4.0.7",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   }
