--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack -p"
+    "build": "set NODE_ENV=production&&webpack -p --progress --color"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.26.2",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "redux-logger": "^2.8.1",
