--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "set NODE_ENV=production&&webpack -p --color",
+    "build": "python cleanup.py&&set NODE_ENV=production&&webpack -p --color",
     "publish":"cd ./dist&&git add *&&git commit -m 'update'&&git push origin master",
     "directpublish":"npm run build&&npm run publish"
   },
