--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "python cleanup.py&&set NODE_ENV=production&&webpack -p --color",
-    "publish":"cd ./dist&&git add *&&git commit -m update&&git push origin master",
-    "directpublish":"npm run build&&npm run publish"
+    "publish": "cd ./dist&&git add *&&git commit -m update&&git push origin master",
+    "directpublish": "npm run build&&npm run publish"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,11 @@
     "@types/highlight.js": "^9.1.9",
     "@types/isomorphic-fetch": "0.0.33",
     "@types/md5": "^2.1.31",
-    "@types/react": "^15.0.15",
+    "@types/react": "^15.0.16",
     "@types/react-dom": "^0.14.23",
     "@types/react-redux": "^4.4.37",
-    "@types/react-router": "^3.0.6",
-    "@types/react-router-redux": "^4.0.42",
+    "@types/react-router": "^3.0.7",
+    "@types/react-router-redux": "^4.0.43",
     "@types/redux": "^3.6.31",
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.2",
@@ -44,8 +44,8 @@
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
-    "@types/react-router-redux": "^4.0.42",
-    "antd": "^2.8.0",
+    "@types/react-router-redux": "^4.0.43",
+    "antd": "^2.8.1",
     "highlight.js": "^9.10.0",
     "isomorphic-fetch": "^2.2.1",
     "markdown-it": "^8.3.1",
@@ -59,6 +59,7 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "redux-saga": "^0.14.3",
     "redux-thunk": "^2.2.0"
   }
 }
