--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-router-redux": "^4.0.43",
     "antd": "^2.8.1",
     "highlight.js": "^9.10.0",
+    "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "js.cookie": "0.0.4",
     "markdown-it": "^8.3.1",
