--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,27 @@
 {
     "presets": [
-        "es2015",
-        "stage-2",
+        [
+            "env",
+            {
+                "targets": {
+                    "browsers": [
+                        "last 2 versions",
+                        "safari >= 7"
+                    ]
+                },
+                "modules": false
+            }
+        ],
         "react"
     ],
     "plugins": [
-        ["import", { "style": "css", "libraryName":"antd" }],
+        [
+            "import",
+            {
+                "style": "css",
+                "libraryName": "antd"
+            }
+        ],
         "react-hot-loader/babel"
     ]
 }
