--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vicblog-front",
+  "name": "vicblog-frontend",
   "version": "1.0.0",
   "description": "A React+Redux+Typescript blog SPA",
   "main": "./dist/index.js",
@@ -17,36 +17,39 @@
   "license": "MIT",
   "devDependencies": {
     "@types/highlight.js": "^9.1.9",
-    "@types/isomorphic-fetch": "0.0.33",
+    "@types/isomorphic-fetch": "0.0.34",
     "@types/md5": "^2.1.31",
-    "@types/react": "^15.0.16",
-    "@types/react-dom": "^0.14.23",
-    "@types/react-redux": "^4.4.37",
-    "@types/react-router": "^3.0.7",
-    "@types/react-router-redux": "^4.0.43",
+    "@types/react": "^16.0.5",
+    "@types/react-dom": "^15.5.4",
+    "@types/react-redux": "^5.0.5",
+    "@types/react-router": "^4.0.15",
+    "@types/react-router-redux": "^5.0.7",
     "@types/redux": "^3.6.31",
     "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.2",
     "babel-core": "^6.23.1",
-    "babel-loader": "^6.4.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.1.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
-    "css-loader": "^0.27.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
+    "css-loader": "^0.28.5",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
-    "redux-logger": "^2.8.2",
-    "style-loader": "^0.13.2",
+    "redux-logger": "^3.0.6",
+    "style-loader": "^0.18.2",
     "typescript": "^2.2.1",
-    "webpack": "^2.2.1",
+    "webpack": "^3.5.5",
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
-    "@types/react-router-redux": "^4.0.43",
+    "@types/react-router": "^4.0.15",
+    "@types/react-router-redux": "^5.0.7",
     "antd": "^2.8.1",
     "highlight.js": "^9.10.0",
+    "history": "^4.7.2",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "js.cookie": "0.0.4",
@@ -58,10 +61,10 @@
     "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.3",
-    "react-router": "^3.0.2",
-    "react-router-redux": "^4.0.8",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
-    "redux-saga": "^0.14.3",
     "redux-thunk": "^2.2.0"
   }
 }
