--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/chai": "^4.1.2",
     "@types/classnames": "^2.2.3",
     "@types/enzyme": "^3.1.8",
+    "@types/markdown-it": "0.0.4",
     "@types/mocha": "^2.2.48",
     "@types/node": "^9.4.0",
     "@types/react": "^16.0.36",
@@ -40,6 +41,7 @@
     "postcss-loader": "^2.1.0",
     "postcss-reporter": "^5.0.0",
     "postcss-url": "^7.3.0",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^0.20.1",
     "svg-react-loader": "^0.4.5",
@@ -53,6 +55,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "markdown-it": "^8.4.1",
     "md5": "^2.2.1",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
