--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
     "@types/react-router": "^4.0.21",
-    "@types/webpack": "^3.8.4",
+    "@types/webpack": "^3.8.8",
+    "@types/webpack-env": "^1.13.5",
     "awesome-typescript-loader": "^3.4.1",
     "chai": "^4.1.2",
     "css-loader": "^0.28.9",
