--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "test": "mocha",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000 --open",
     "build": "npm run cleandist&&webpack -p --progress --colors",
-    "cleandist": "ts-node cleandist.ts"
+    "cleandist": "ts-node ./deploy/cleandist.ts"
   },
-  "license": "MIT",
+  "license": "Apache 2.0",
   "devDependencies": {
     "@types/chai": "^4.1.2",
     "@types/classnames": "^2.2.3",
-    "@types/enzyme": "^3.1.8",
+    "@types/enzyme": "^3.1.9",
     "@types/markdown-it": "0.0.4",
     "@types/mocha": "^2.2.48",
-    "@types/node": "^9.4.0",
-    "@types/react": "^16.0.36",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-router": "^4.0.21",
+    "@types/node": "^9.4.6",
+    "@types/react": "^16.0.38",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-router": "^4.0.22",
     "@types/webpack": "^3.8.8",
     "@types/webpack-env": "^1.13.5",
     "awesome-typescript-loader": "^3.4.1",
@@ -28,29 +28,29 @@
     "css-loader": "^0.28.9",
     "enzyme": "^3.3.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "file-loader": "^1.1.8",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "mobx-react-devtools": "^4.2.15",
-    "mocha": "^5.0.0",
+    "mocha": "^5.0.1",
     "mocha-typescript": "^1.1.12",
     "moment": "^2.20.1",
-    "postcss": "^6.0.17",
+    "postcss": "^6.0.19",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^11.0.0",
+    "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.0",
     "postcss-reporter": "^5.0.0",
     "postcss-url": "^7.3.0",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.1.3",
-    "style-loader": "^0.20.1",
+    "style-loader": "^0.20.2",
     "svg-react-loader": "^0.4.5",
-    "ts-node": "^4.1.0",
-    "typescript": "^2.7.1",
-    "uglifyjs-webpack-plugin": "^1.1.8",
+    "ts-node": "^5.0.0",
+    "typescript": "^2.7.2",
+    "uglifyjs-webpack-plugin": "^1.2.0",
     "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
+    "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
     "webpack-hot-middleware": "^2.21.0"
   },
@@ -58,12 +58,11 @@
     "classnames": "^2.2.5",
     "markdown-it": "^8.4.1",
     "md5": "^2.2.1",
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
+    "mobx": "^3.5.1",
+    "mobx-react": "^4.4.2",
     "mobx-react-router": "^4.0.1",
     "mobx-utils": "^3.2.2",
-    "normalize.css": "^7.0.0",
-    "office-ui-fabric-react": "^5.45.3",
+    "office-ui-fabric-react": "^5.53.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
