--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^0.20.2",
-    "svg-react-loader": "^0.4.5",
     "ts-node": "^5.0.0",
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.0",
@@ -72,6 +71,7 @@
     "react-markdown": "^3.2.1",
     "react-router": "^4.2.0",
     "react-scroll-up-button": "^1.5.11",
+    "react-svg": "^2.2.13",
     "react-syntax-highlighter": "^7.0.0",
     "w3-css": "^4.0.4"
   }
