--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "mocha",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000 --open",
     "build": "npm run cleandist&&webpack -p --progress --colors",
-    "cleandist": "ts-node ./deploy/cleandist.ts"
+    "cleandist": "ts-node ./deploy/cleandist.ts",
+    "localdeploy": "npm run build;./deploy/localdeploy.ps1"
   },
   "license": "Apache 2.0",
   "devDependencies": {
@@ -47,6 +48,7 @@
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^0.20.2",
+    "svg-react-loader": "^0.4.5",
     "ts-node": "^5.0.0",
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
@@ -69,7 +71,6 @@
     "react-markdown": "^3.2.2",
     "react-router": "^4.2.0",
     "react-scroll-up-button": "^1.5.11",
-    "react-svg": "^2.2.13",
     "react-syntax-highlighter": "^7.0.1",
     "w3-css": "^4.0.4"
   }
