--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000 --open",
+    "start": "webpack-dev-server -d --hot --inline",
     "build": "npm run cleandist&&webpack -p --progress --colors",
     "cleandist": "ts-node ./deploy/cleandist.ts",
     "localdeploy": "npm run build;./deploy/localdeploy.ps1"
@@ -38,13 +38,6 @@
     "mocha": "^5.0.1",
     "mocha-typescript": "^1.1.12",
     "moment": "^2.20.1",
-    "postcss": "^6.0.19",
-    "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.1",
-    "postcss-reporter": "^5.0.0",
-    "postcss-url": "^7.3.1",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^0.20.2",
