--- a/package.json
+++ b/package.json
@@ -16,54 +16,54 @@
     "@types/chai": "^4.1.2",
     "@types/classnames": "^2.2.3",
     "@types/enzyme": "^3.1.9",
-    "@types/markdown-it": "0.0.4",
-    "@types/markdown-it-anchor": "^4.0.1",
     "@types/mocha": "^2.2.48",
-    "@types/node": "^9.4.6",
-    "@types/react": "^16.0.38",
+    "@types/node": "^9.4.7",
+    "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
     "@types/react-router": "^4.0.22",
-    "@types/react-syntax-highlighter": "0.0.4",
-    "@types/webpack": "^3.8.8",
+    "@types/react-syntax-highlighter": "0.0.5",
+    "@types/webpack": "^4.1.0",
     "@types/webpack-env": "^1.13.5",
-    "awesome-typescript-loader": "^3.5.0",
+    "babel-loader": "^7.1.4",
     "chai": "^4.1.2",
     "css-loader": "^0.28.10",
     "enzyme": "^3.3.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.10",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.0.6",
     "mobx-react-devtools": "^4.2.15",
-    "mocha": "^5.0.1",
+    "mocha": "^5.0.4",
     "mocha-typescript": "^1.1.12",
-    "moment": "^2.20.1",
+    "moment": "^2.21.0",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "^3.1.3",
-    "style-loader": "^0.20.2",
+    "react-hot-loader": "^4.0.0",
+    "style-loader": "^0.20.3",
     "svg-react-loader": "^0.4.5",
-    "ts-node": "^5.0.0",
+    "ts-loader": "^4.0.1",
+    "ts-node": "^5.0.1",
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2",
-    "webpack-hot-middleware": "^2.21.0"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-hot-middleware": "^2.21.2"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "md5": "^2.2.1",
-    "mobx": "^3.5.1",
-    "mobx-react": "^4.4.2",
+    "mobx": "^3.6.1",
+    "mobx-react": "^4.4.3",
     "mobx-react-router": "^4.0.1",
     "mobx-utils": "^3.2.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
-    "react-markdown": "^3.2.2",
+    "react-markdown": "^3.3.0",
     "react-router": "^4.2.0",
     "react-scroll-up-button": "^1.5.11",
-    "react-syntax-highlighter": "^7.0.1",
+    "react-syntax-highlighter": "^7.0.2",
     "w3-css": "^4.0.4"
   }
 }
