--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
+    "mini-css-extract-plugin": "^0.2.0",
     "mobx-react-devtools": "^4.2.15",
     "mocha": "^5.0.4",
     "mocha-typescript": "^1.1.12",
