--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^16.3.5",
     "@types/react-dom": "^16.0.4",
     "@types/react-router": "^4.0.23",
+    "@types/react-router-dom": "^4.2.6",
     "@types/react-syntax-highlighter": "0.0.5",
     "@types/webpack": "^4.1.3",
     "@types/webpack-env": "^1.13.5",
@@ -64,6 +65,7 @@
     "react-icons": "^2.2.7",
     "react-markdown": "^3.3.0",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scroll-up-button": "^1.5.11",
     "react-syntax-highlighter": "^7.0.2",
     "react.di": "^2.0.0",
