--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -5,7 +5,7 @@
     {
       "src": "/biglogo.png",
       "type": "image/png",
-      "sizes": "512*512"
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
