--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/enzyme": "^3.1.9",
     "@types/mocha": "^5.0.0",
     "@types/node": "^9.6.2",
-    "@types/react": "^16.3.5",
+    "@types/react": "^16.3.6",
     "@types/react-dom": "^16.0.4",
     "@types/react-router": "^4.0.23",
     "@types/react-router-dom": "^4.2.6",
@@ -44,16 +44,16 @@
     "react-hot-loader": "^4.0.1",
     "style-loader": "^0.20.3",
     "svg-react-loader": "^0.4.5",
-    "ts-loader": "^4.1.0",
+    "ts-loader": "^4.2.0",
     "ts-node": "^5.0.1",
     "typescript": "^2.8.1",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.1",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-manifest-plugin": "^2.0.0-rc.2"
+    "webpack-dev-server": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.0",
+    "webpack-manifest-plugin": "^2.0.0"
   },
   "dependencies": {
     "classnames": "^2.2.5",
